# free-icons

./: .gitmodules  .tokeignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml  deny.toml
.github/workflows/: build.yml
src/: lib.rs
templates/: general.rs.j2  lazy.rs.j2
