[package]
name = "free-icons"
version = "0.5.3"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/free-icons"
repository = "https://github.com/tyrchen/free-icons"
homepage = "https://github.com/tyrchen/free-icons"
description = """
Use free svg icons in your html projects
"""
readme = "README.md"
categories = ["web-programming"]
keywords = ["icons", "svg"]
include = [
    "Cargo.toml",
    "build.rs",
    "src/lib.rs",
    "src/gen/*",
    "templates/*",
]


[features]
default = ["bootstrap", "feather", "font-awesome", "heroicons", "ionicons", "octicons"]
bootstrap = []
feather = []
font-awesome = []
heroicons = []
ionicons = []
octicons = []
json = ["serde_json"]

[dependencies]
bincode = "2.0.0-rc.2"
flate2 = "1.0.25"
lazy_static = "1.4.0"
serde_json = { version = "1.0.91", optional = true }

[build-dependencies]
anyhow = "1.0.68"
bincode = "2.0.0-rc.2"
convert_case = "0.6.0"
flate2 = "1.0.25"
minify-html = "0.10.7"
minijinja = { version = "0.30.0", features = ["speedups", "source"] }
serde_json = "1.0.91"


[dev-dependencies]
minify-html = "0.10.7"
