[package]
name = "free-icons"
version = "0.7.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/free-icons"
repository = "https://github.com/tyrchen/free-icons"
homepage = "https://github.com/tyrchen/free-icons"
description = """
Use free svg icons in your html projects
"""
readme = "README.md"
categories = ["web-programming"]
keywords = ["icons", "svg"]
include = ["Cargo.toml", "build.rs", "src/lib.rs", "src/gen/*", "templates/*"]


[features]
default = [
  "bootstrap",
  "feather",
  "font-awesome",
  "heroicons",
  "ionicons",
  "octicons",
]
bootstrap = []
feather = []
font-awesome = []
heroicons = []
ionicons = []
octicons = []
json = ["serde_json"]

[dependencies]
bincode = "2.0.0-rc.3"
flate2 = "1.0.28"
lazy_static = "1.4.0"
serde_json = { version = "1.0.108", optional = true }

[build-dependencies]
anyhow = "1.0.76"
bincode = "2.0.0-rc"
convert_case = "0.6.0"
flate2 = "1.0.28"
minify-html = "0.15.0"
minijinja = { version = "1.0.10", features = ["loader", "speedups"] }
serde_json = "1.0.108"


[dev-dependencies]
minify-html = "0.15.0"
